--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/a1399a01c0.js" crossorigin="anonymous"></script>
+    <!-- navbar fixed css -->
+    <link rel="stylesheet" href="css/navbar-fixed.css">
     <!-- main css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -291,7 +293,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-
+    <!-- navbar fixed js -->
+    <script src="js/navbar-fixed.js"></script>
+    <!-- main css -->
     <script src="js/main.js"></script>
 </body>
 
