--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="shortcut icon" href="img/m.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="col-sm-12 col-lg-6">
                     <div class="explore_img">
-                        <img src="/img/explore.jpeg" class="img-fluid img-rounded" alt="explore">
+                        <img src="img/explore.jpeg" class="img-fluid img-rounded" alt="explore">
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6">
@@ -192,7 +192,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-6">
                     <div class="create_img">
-                        <img src="/img/create.jpeg" class="img-fluid img-rounded" alt="create">
+                        <img src="img/create.jpeg" class="img-fluid img-rounded" alt="create">
                     </div>
                 </div>
             </div>
@@ -217,7 +217,7 @@
             <div class="row">
                 <div class="col-sm-12 col-lg-6">
                     <div class="share_img">
-                        <img src="/img/share.jpeg" class="img-fluid img-rounded" alt="share">
+                        <img src="img/share.jpeg" class="img-fluid img-rounded" alt="share">
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6">
